src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
@import '@libs/ui/styles/includes';

.wrapper {
    min-height: 800px;
}

.header {
    display: flex;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    font-family: $font-barlow-condensed;
    font-size: 40px;
    font-weight: $font-weight-medium;
    margin-top: $sp-2;
    padding: $sp-6 0;
    color: $teal-100;
    text-align: center;         
    word-break: break-word;
    line-height: 1.2;         
        
}

@media (max-width: 767px) {
    .header {
        font-size: 32px;         
        line-height: 38px;

    }
}


.infoRow {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin: 16px 80px;
    padding: 12px 0;
}

@media (max-width: 767px) {
    .infoRow {
        flex-wrap: wrap;
        margin: 0;
    }
}

.infoText {
    display: flex;
    flex-direction: column;
}

.infoHeading {
    font-size: 14px;
    color: #666;
}

.infoValue {
    font-size: 14px;
    font-weight: 600;
    text-transform: capitalize;
    color: #333;
}

.infoColumn {
    display: flex;
    align-items: center;
    gap: 8px;
    flex: 1;
    min-width: 120px;
}

.icon {
    width: 30px;
    height: 30px;
    color: $teal-100;
}

.applied {
    display: flex;
    align-items: center;
    .appliedIcon {
        width: 30px;
        height: 30px;
        color: $green-1;
    }

    .appliedText {
        font-size: 14px;
        font-weight: 600;
        color: #333;
    }
}

.textCaps {
    text-transform: capitalize;
}

